# pixi

./: .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
pixi/: __init__.py  __main__.py  client.py  commands.py  common.py  config.py  database.py  errors.py  options.py  util.py
pixi/migrations/: 0001.sql
tests/: test.db  test_client.py  test_commands.py  test_common.py  test_config.py  test_database.py  test_util.py
