[tool.poetry]
name = "pixi"
version = "0.2.0"
description = "A command line tool to download images from Pixiv."
authors = ["azuline <azuline@riseup.net>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/azuline/pixi"

[tool.poetry.scripts]
pixi = "pixi.__main__:run"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
appdirs = "^1.4"
tqdm = "^4.32"
pixiv-api = "^0.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
isort = "^4.3"
pytest = "^5.0"
pytest-cov = "^2.7"
mock = "^3.0"
coveralls = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
